tests/snapshots/transform__attr_key_event_prefix_on.snap
---
source: tests/transform.rs
expression: element.transform()
---
Element {
    tag: Native(
        "div",
    ),
    attrs: [
        Attr {
            key: Event(
                "Click",
            ),
            value: Lit(
                Str(
                    Str {
                        span: Span {
                            lo: BytePos(
                                14,
                            ),
                            hi: BytePos(
                                22,
                            ),
                            ctxt: #0,
                        },
                        value: Atom('()=>{}' type=inline),
                        raw: Some(
                            "\"()=>{}\"",
                        ),
                    },
                ),
            ),
        },
    ],
    children: [],
    raw: JSXElement {
        span: Span {
            lo: BytePos(
                1,
            ),
            hi: BytePos(
                29,
            ),
            ctxt: #0,
        },
        opening: JSXOpeningElement {
            name: Ident(
                Ident {
                    span: Span {
                        lo: BytePos(
                            2,
                        ),
                        hi: BytePos(
                            5,
                        ),
                        ctxt: #0,
                    },
                    sym: Atom('div' type=static),
                    optional: false,
                },
            ),
            span: Span {
                lo: BytePos(
                    1,
                ),
                hi: BytePos(
                    23,
                ),
                ctxt: #0,
            },
            attrs: [
                JSXAttr(
                    JSXAttr {
                        span: Span {
                            lo: BytePos(
                                6,
                            ),
                            hi: BytePos(
                                22,
                            ),
                            ctxt: #0,
                        },
                        name: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        6,
                                    ),
                                    hi: BytePos(
                                        13,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('onClick' type=inline),
                                optional: false,
                            },
                        ),
                        value: Some(
                            Lit(
                                Str(
                                    Str {
                                        span: Span {
                                            lo: BytePos(
                                                14,
                                            ),
                                            hi: BytePos(
                                                22,
                                            ),
                                            ctxt: #0,
                                        },
                                        value: Atom('()=>{}' type=inline),
                                        raw: Some(
                                            "\"()=>{}\"",
                                        ),
                                    },
                                ),
                            ),
                        ),
                    },
                ),
            ],
            self_closing: false,
            type_args: None,
        },
        children: [],
        closing: Some(
            JSXClosingElement {
                span: Span {
                    lo: BytePos(
                        23,
                    ),
                    hi: BytePos(
                        29,
                    ),
                    ctxt: #0,
                },
                name: Ident(
                    Ident {
                        span: Span {
                            lo: BytePos(
                                25,
                            ),
                            hi: BytePos(
                                28,
                            ),
                            ctxt: #0,
                        },
                        sym: Atom('div' type=static),
                        optional: false,
                    },
                ),
            },
        ),
    },
    is_static: true,
}
